css/styles.css
@charset "UTF-8";
/**
 * @file
 * Styles are organized using the SMACSS technique. @see http://smacss.com/book/
 *
 * When you turn on CSS aggregation at admin/config/development/performance, all
 * of these @include files will be combined into a single file.
 */
/* Import Sass mixins, variables, Compass modules, etc. */
/* HTML element (SMACSS base) rules */
/**
 * @file
 * Normalize.css is intended to be used as an alternative to CSS resets.
 *
 * This file is a slight fork of these original sources:
 * - normalize.css v2.1.2 | MIT License | git.io/normalize
 * - normalize.scss v2.1.2 | MIT/GPLv2 License | bit.ly/normalize-with-compass
 *
 * It's suggested that you read the normalize.scss file and customise it to meet
 * your needs, rather then including the file in your project and overriding the
 * defaults later in your CSS.
 * @see http://nicolasgallagher.com/about-normalize-css/
 *
 * Also: @see http://meiert.com/en/blog/20080419/reset-style-sheets-are-bad/
 *       @see http://snook.ca/archives/html_and_css/no_css_reset/
 */

#edit-islandora-simple-search-query{
  color: #666666 !important;
}

/**
 * HTML5 display definitions
 */
/* Correct `block` display not defined in IE 8/9. */
@import url(//fonts.googleapis.com/css?family=Ropa+Sans|Gentium+Basic:400,400italic|Open+Sans:400italic,400,600);
/* line 33, ../sass/_normalize.scss */
article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
nav,
section,
summary {
  display: block;
}

/* Correct `inline-block` display not defined in IE 8/9. */
/* line 40, ../sass/_normalize.scss */
audio,
canvas,
video {
  display: inline-block;
}

/**
 * Prevent modern browsers from displaying `audio` without controls.
 * Remove excess height in iOS 5 devices.
 */
/* line 52, ../sass/_normalize.scss */
audio:not([controls]) {
  display: none;
  height: 0;
}

/* Address styling not present in IE 8/9. */
/* line 58, ../sass/_normalize.scss */
[hidden] {
  display: none;
}

#navigation .links li:nth-child(4) > a{
  border-right: none !important;
}

.front .views-field > span > a {
  display: table;
  width: 100%;
  position: relative;
  max-width: 10em;
  height: 0;
  padding: 100% 0 0 0;
  overflow: hidden;
}

.front .views-field > span > a > img{
  position: absolute;
  display: block;
  width: auto;
  height: 100%;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  max-height: 10em;
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  -khtml-border-radius: 8px;  
  border-radius: 8px;
  overflow: hidden;
}
 
.front .views-field-fgs-label-s > span > a{
  padding-top: 0;
}

.front .recent-additions .view-wrlc-frontpage-solr-boxes .view-content .views-responsive-grid .views-row {
  width: 100%;
}

.front .views-field-dctitle{
  padding-top: 12px;
}

fieldset.islandora.islandora-metadata.collapsible.collapsed.collapse-processed {
  padding-bottom: 20px !important;
}

/**
 * Base
 *
 * Instead of relying on the fonts that are available on a user's computer, you
 * can use web fonts which, like images, are resources downloaded to the user's
 * browser. Because of the bandwidth and rendering resources required, web fonts
 * should be used with care.
 *
 * Numerous resources for web fonts can be found on Google. Here are a few
 * websites where you can find Open Source fonts to download:
 * - http://www.fontsquirrel.com/fontface
 * - http://www.theleagueofmoveabletype.com
 *
 * In order to use these fonts, you will need to convert them into formats
 * suitable for web fonts. We recommend the free-to-use Font Squirrel's
 * Font-Face Generator:
 *   http://www.fontsquirrel.com/fontface/generator
 *
 * The following is an example @font-face declaration. This font can then be
 * used in any ruleset using a property like this:  font-family: Example, serif;
 *
 * Since we're using Sass, you'll need to declare your font faces here, then you
 * can add them to the font variables in the _init.scss partial.
 */
/*
@font-face {
  font-family: 'Example';
  src: url('../fonts/example.eot');
  src: url('../fonts/example.eot?iefix') format('eot'),
    url('../fonts/example.woff') format('woff'),
    url('../fonts/example.ttf') format('truetype'),
    url('../fonts/example.svg#webfontOkOndcij') format('svg');
  font-weight: normal;
  font-style: normal;
}
*/
/**
 * 1. Set default font family to sans-serif.
 * 2. Prevent iOS text size adjust after orientation change, without disabling
 *    user zoom.
 * 3. Correct text resizing oddly in IE 6/7 when body `font-size` is set using
 *    `em` units.
 */
/* line 109, ../sass/_normalize.scss */
html {
  font-family: Open Sans, Verdana, Tahoma, "DejaVu Sans", sans-serif;
  /* 1 */
  font-size: 85%;
  /* 3 */
  -ms-text-size-adjust: 85%;
  /* 2 */
  -webkit-text-size-adjust: 85%;
  /* 2 */
  color: #1a1a1a;
  line-height: 1.5em;
}

/* Remove default margin. */
/* line 130, ../sass/_normalize.scss */
body {
  margin: 0;
  padding: 0;
}

/* Remove safari highlights */
/* line 136, ../sass/_normalize.scss */
[tabindex="-1"] {
  outline: 0;
}

/**
 * Links
 *
 * The order of link states are based on Eric Meyer's article:
 * http://meyerweb.com/eric/thoughts/2007/06/11/who-ordered-the-link-states
 */
/* line 147, ../sass/_normalize.scss */
a:link, a:visited {
  text-decoration: none;
  color: #717072;
}
/* line 151, ../sass/_normalize.scss */
a:hover, a:focus, a:active, a.active {
  color: #009fda;
}

/* Address `outline` inconsistency between Chrome and other browsers. */
/* line 157, ../sass/_normalize.scss */
a:focus {
  outline: thin dotted;
}

/* Improve readability when focused and also mouse hovered in all browsers. */
/* line 163, ../sass/_normalize.scss */
a:active,
a:hover {
  outline: 0;
}
/* ... */

